package lk.icbt.cis6003.dentalclinic.model;

/** Patient gender. OTHER is included so nobody has to be recorded wrongly. */
public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
