package lk.icbt.cis6003.dentalclinic.model;

/** How a paid bill was settled. Null until the bill is actually paid. */
public enum PaymentMethod {
    CASH,
    CARD,
    INSURANCE
}
