package lk.icbt.cis6003.dentalclinic.model;

/** Whether a bill has been settled. */
public enum PaymentStatus {
    UNPAID,
    PAID
}
